<resources>
    <string name="app_name">sleep_application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tips">Sleep Tips</string>
    <string name="menu_sleep_tracking">Sleep Tracking</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_manual_log">Manual Log</string>
    <string name="menu_login">Login</string>
    <string name="menu_music">Music</string>
    <string name="menu_meditation">Meditation</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>

    <string name="insert_start_time">Insert Start Time</string>
    <string name="insert_end_time">Insert End Time</string>
    <string name="select_time">Select Time</string>

    <string name="login_username">Username</string>
    <string name="login_email">Email</string>
    <string name="login_new">Create New Account</string>
  
    <string name="music_play">Play</string>
    <string name="music_pause">Pause</string>
    <string name="music_stop">Stop</string>
    <string name="music_previous">Previous</string>
    <string name="music_next">Next</string>
    <string name="sleep_log">Sleep Log</string>
    <string name="start_time">Start Time</string>
    <string name="empty_time">00:00:00</string>
    <string name="duration">Duration</string>
    <string name="end_time">End Time</string>

    <string-array name="array_meditation">
        <item>Breathing Session</item>
        <item>Stretching Session</item>
        <item>Aerobic Activities</item>
    </string-array>


</resources>