<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sleep_tracking"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_sleep_tracking" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_manual_log"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_manual_log" />
        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/stat_sys_headset"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_meditation"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/menu_meditation" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_login" />
    </group>
</menu>