<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_manual_log"
        android:name="com.example.sleep_application.ui.manual_log.ManualLogFragment"
        android:label="@string/menu_manual_log"
        tools:layout="@layout/fragment_manual_log" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sleep_application.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_sleep_tracking"
        android:name="com.example.sleep_application.ui.sleep_tracking_timer.SleepTrackingFragment"
        android:label="@string/menu_sleep_tracking"
        tools:layout="@layout/fragment_sleep_tracking" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.sleep_application.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_music"
        android:name="com.example.sleep_application.ui.music_player.MusicFragment"
        android:label="Music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_meditation"
        android:name="com.example.sleep_application.ui.meditation.MeditationFragment"
        android:label="Meditation"
        tools:layout="@layout/fragment_meditation" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.sleep_application.ui.sleep_tips.TipsFragment"
        android:label="Sleep Tips"
        tools:layout="@layout/fragment_tips" />

</navigation>