<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.manual_log.ManualLogFragment">


    <TextView
        android:id="@+id/text_manual_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="418dp"
        android:layout_height="630dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manual_log_end_time"
                android:layout_width="214dp"
                android:layout_height="53dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/insert_end_time"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manual_log_date_btn" />

            <Button
                android:id="@+id/manual_log_end"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/select_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manual_log_end_time" />

            <TextView
                android:id="@+id/manual_log_start_time"
                android:layout_width="214dp"
                android:layout_height="43dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/insert_start_time"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/manual_log_start"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/select_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manual_log_start_time" />

            <TextView
                android:id="@+id/manual_log_date"
                android:layout_width="214dp"
                android:layout_height="53dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:gravity="center"
                android:hint="Insert Date"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manual_log_start" />

            <Button
                android:id="@+id/manual_log_date_btn"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="SELECT DATE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manual_log_date" />

            <Button
                android:id="@+id/manual_log_save"
                android:layout_width="328dp"
                android:layout_height="99dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="27dp"
                android:text="@string/save"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manual_log_end" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
